--- a/index.html
+++ b/index.html
@@ -1,23 +1,412 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="shortcut icon" type="image/jpg" href="/image/MAhfuz.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="/image/Mahfuz.jpg">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/syle.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Mahfuzuer Rahaman</title>
-  </head>
-  <body>
-   
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-  </body>
+<body>
+
+
+
+    <!--   This is banner section -->
+
+
+
+    <section class="banner-container container-fluid">
+        <div class="row vh-100">
+            <div class="col-md-9 banner-column m-auto text-white text-center p-3 border border-light">
+                <h2 class="text-white font-weight-bolde">MAHFUZUR RAHAMAN</h2>
+                <H5 clzass="text-blue"> CSE Engineer & Web Developer</H5>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- Navbar SECTION -->
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg- navbar-container sticky-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#About">About<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Education">Education</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Project">Poject</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Gallery">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Contact">Contact</a>
+                </li>
+
+            </ul>
+
+        </div>
+    </nav>
+
+
+
+
+    <!-- This is About me section -->
+
+
+    <div class="about-container" id="About">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-9 p-5 text-white ">
+                    <h3>Mahfuzur Rahaman</h3>
+                    <p>CSE Engineer & Web Developer</p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum expedita nam voluptatum cum neque
+                    voluptate cumque odit beatae deserunt omnis.
+
+
+
+                    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae neque sapiente excepturi
+                        corrupti est aperiam perferendis vero, pariatur aut, voluptate quae animi eaque illum id at
+                        magni, officiis atque culpa eum magnam incidunt? Ipsa assumenda, veritatis quas aspernatur vero
+                        at facere amet! Placeat vero numquam quae quos sapiente provident facilis?</P>
+
+
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, magni at? Reprehenderit amet
+                    corrupti sed autem nisi dignissimos sint maiores. Ratione sunt blanditiis consequatur qui voluptates
+                    vel accusantium ab ullam.
+
+                </div>
+                <div class="col-md-3 mb-4">
+                    <img src="/image/Mahfuz-removebg-preview.png" alt="Mahfuz"
+                        class="img-fluid rounded-circle border border-light">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- This is Education section -->
+
+
+
+    <div class="education-container">
+        <div class="container">
+            <div class="row text-center " id="Education">
+                <div class="col py-5">
+                    <h2 class="bg-greentype font-weight-bolder">Education</h2>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-2 text-center text-white  py-4 my-4">
+                    <div class="circle">
+                        <p class="py-5">Jan 2012 <br>
+                            Dec 2015
+
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="col-md-10 py-4 my-4">
+                    <div class="card  ml-5">
+                        <div class="card-body ml-3">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, nostrum! Eaque, in
+                                veritatis! Delectus non hic minus fuga, asperiores saepe!</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-2 text-center text-white  py-4 my-4">
+                    <div class="circle">
+                        <p class="py-5">Jan 2012 <br>
+                            Dec 2015
+
+                        </p>
+
+                    </div>
+
+                </div>
+                <div class="col-md-10 py-4 my-4">
+                    <div class="card ml-5 ">
+                        <div class="card-body ml-3">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, nostrum! Eaque, in
+                                veritatis! Delectus non hic minus fuga, asperiores saepe!</p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- This is project Section -->
+
+
+
+    <div class="project-container" id="Project">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col ">
+                    <h2 class="text-dark text-center font-weight-bold">Projects</h2>
+                </div>
+
+            </div>
+            <div class="row px-4">
+                <div class="col-md-3 py-4">
+                    <img src="/image/code window.jpg " class="img-fluid" alt="">
+                    <a href="" class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias
+                        quo nemo, quia distinctio expedita praesentium iusto saepe.</a>
+                    <p>10:45pm</p>
+                </div>
+                <div class="col-md-3 py-4">
+                    <img src="/image/dell-1o5MZblCP50-unsplash.jpg " class="img-fluid" alt="">
+                    <a href="" class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias
+                        quo nemo, quia distinctio expedita praesentium iusto saepe.</a>
+                    <p>10:45pm</p>
+                </div>
+                <div class="col-md-3 py-4">
+                    <img src="/image/kelly-sikkema-OYQ6apQXOS8-unsplash.jpg " class="img-fluid" alt="">
+                    <a href="" class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias
+                        quo nemo, quia distinctio expedita praesentium iusto saepe.</a>
+                    <p>10:45pm</p>
+                </div>
+                <div class="col-md-3 py-4">
+                    <img src="/image/code window.jpg " class="img-fluid" alt="">
+                    <a href="" class="text-white"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias
+                        quo nemo, quia distinctio expedita praesentium iusto saepe.</a>
+                    <p>10:45pm</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- This is portfolio -->
+    <div class="portfolio-container " id="Portfolio">
+        <div class="row py-4">
+            <div class="col text-center " id="Portfolio">
+                <h2 class="font-weight-bold">Portfolio</h2>
+            </div>
+        </div>
+        <div class="row py-4">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/m1.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/m3.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/Mahfuz.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="row py-4">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/m5.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/m6.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/m7.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
+
+    <!-- This is form container -->
+
+    <div class="form-container" id="Contact">
+        <div class="container-form">
+            <div class="row py-5">
+                <div class="col text-white m-auto text-center">
+                    <h2 class="font-weight-bold">This is for form contact</h2>
+                    <p>Care about it</p>
+                </div>
+            </div>
+            <div class="row py-4">
+                <div class="col-sm mr-1    border border-light text-white text-center ">
+                    <span style="font-size: 72px;">70</span>
+                    <h4>Favourite number</h4>
+
+                </div>
+
+                <div class="col-sm mr-1 border border-light text-white text-center ">
+                    <span style="font-size: 72px;">70</span>
+                    <h4>Favourite number</h4>
+
+                </div>
+
+                <div class="col-sm mr-1  border border-light text-white text-center ">
+                    <span style="font-size: 72px;">70</span>
+                    <h4>Favourite number</h4>
+
+                </div>
+
+                <div class="col-sm mr-1  border border-light text-white text-center ">
+                    <span style="font-size: 72px;">70</span>
+                    <h4>Favourite number</h4>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col text-white m-auto text-center pb-4">
+                <h2 class="font-weight-bold">Get in touch </h2>
+                <p>Thank you </p>
+
+                <div class="col text-white text-center pb-4 ">
+                    <h4>Through a message </h4>
+
+                    <form action="Mahfuz.php">
+                        <div class="form-row">
+                            <div class="col">
+                                <input type=" text" class="form-control inner-font" placeholder="Your name">
+
+                            </div>
+                            <div class="col">
+                                <input type=" text" class="form-control inner-font " placeholder="Your name">
+
+                            </div>
+                        </div>
+                        <div class="row pb-3">
+                            <div class="col">
+                                <textarea name="" class="form-control inner-font" id="" cols="30" rows="5"
+                                    placeholder="Your message..."></textarea>
+                            </div>
+                        </div>
+                        <div class="row pb-4">
+                            <div class="col">
+                                <button class="btn form-container pb-3 text-white border border-light">Send
+                                    message</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+        <!-- this is footer section-->
+        <section>
+
+            <div class="contianer">
+                <div class="footer">
+                    <div class="container">
+                        <div class="row py-5 ">
+                            <div class="col text-white text-center">
+                                <em>
+                                    <h4>From Mahfuzur Rahaman</h4>
+                                    <p>Frank Question</p>
+                                </em>
+                            </div>
+                        </div>
+
+
+                        <div class="row py-4">
+                            <div class="col text-center">
+                                <div class="circle-icon">
+                                    <i class="fa fa-facebook-f" style="font: size 30pxpx; color:white"></i>
+
+                                </div>
+                                <div class="circle-icon">
+                                    <i class="fa fa-github" style="color:white"></i>
+
+
+                                </div>
+                                <div class="circle-icon">
+                                    <i class="fa fa-youtube-play" style="color:white"></i>
+                                </div>
+                                <div class="circle-icon">
+                                    <i class="fa fa-whatsapp" style="color:white"></i>
+                                </div>
+                                <div class="circle-icon">
+                                    <i class="fa fa-linkedin-square" style="color:white"></i>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col text-center">
+                                <p>&copy; All Rights Reserved to Mahfuzur Rahaman</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+</body>
+
 </html>
